--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,3 +1,6 @@
 {
-  "CommandService": "http://commandservice-clusterip-srv:80/api/c/platforms"
+  "CommandService": "http://commandservice-clusterip-srv:80/api/c/platforms",
+  "ConnectionStrings": {
+    "PlatformsConn": "Server=mssql-clusterip-srv,1433;TrustServerCertificate=True;Initial Catalog=platformsdb;User ID=sa;Password=testpa55w0rd!"
+  }
 }
