Opsæt af RabbitMQ Client i PlatformService - Testet og virker

--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "http://localhost:5294/api/c/platforms"
+  "CommandService": "http://localhost:5294/api/c/platforms",
+  "ConnectionStrings": {
+    "PlatformsConn": "Server=mssql-clusterip-srv,1433;TrustServerCertificate=True;Initial Catalog=platformsdb;User ID=sa;Password=testpa55w0rd!"
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort":  "5672"
 }
