--- a/K8S/commands-depl.yaml
+++ b/K8S/commands-depl.yaml
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: commandservice-clusterip-srv
+  name: commands-clusterip-srv
 spec:
   type: ClusterIP
   selector:
