opsæt af Grpc i PlatformsService

--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -4,5 +4,17 @@
     "PlatformsConn": "Server=mssql-clusterip-srv,1433;TrustServerCertificate=True;Initial Catalog=platformsdb;User ID=sa;Password=testpa55w0rd!"
   },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
-  "RabbitMQPort": "5672"
+  "RabbitMQPort": "5672",
+  "Kestrel": {
+    "Endpoints": {
+      "Grpc": {
+        "Protocols": "Http2",
+        "Url": "http://platforms-clusterip-srv:1337"
+      },
+      "webApi": {
+        "Protocols": "Http1",
+        "Url": "http://platforms-clusterip-srv:1337"
+      }
+    }
+  }
 }
